update app test cases
